// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NFT Orders buildNFTOrder p2p: P2P_Order_Data_Snapshot 1`] = `
{
  "data": {
    "expiry": 1766188800,
    "maker": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "makerAmount": "1000000000000000000",
    "makerAsset": "2072883924162524385437572631638126955675586600207",
    "makerAssetId": "9982",
    "nonceAndMeta": "2693234308085732315020447542820174961101890254772",
    "taker": "0xDEF171Fe48CF0115B1d80b88dc8eAB59176FEe57",
    "takerAmount": "8000000000000000000",
    "takerAsset": "454839140962945226527790820083642630354574802003",
    "takerAssetId": "0",
  },
  "domain": {
    "chainId": 1,
    "name": "AUGUSTUS RFQ",
    "verifyingContract": "0xe92b586627ccA7a83dC919cc7127196d70f55a06",
    "version": "1",
  },
  "types": {
    "OrderNFT": [
      {
        "name": "nonceAndMeta",
        "type": "uint256",
      },
      {
        "name": "expiry",
        "type": "uint128",
      },
      {
        "name": "makerAsset",
        "type": "uint256",
      },
      {
        "name": "makerAssetId",
        "type": "uint256",
      },
      {
        "name": "takerAsset",
        "type": "uint256",
      },
      {
        "name": "takerAssetId",
        "type": "uint256",
      },
      {
        "name": "maker",
        "type": "address",
      },
      {
        "name": "taker",
        "type": "address",
      },
      {
        "name": "makerAmount",
        "type": "uint256",
      },
      {
        "name": "takerAmount",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`NFT Orders buildNFTOrder: Order_Data_Snapshot 1`] = `
{
  "data": {
    "expiry": 1766188800,
    "maker": "0xaC39b311DCEb2A4b2f5d8461c1cdaF756F4F7Ae9",
    "makerAmount": "1000000000000000000",
    "makerAsset": "2072883924162524385437572631638126955675586600207",
    "makerAssetId": "9982",
    "nonceAndMeta": "1461501637330902918203684832716283019655932542976",
    "taker": "0xDEF171Fe48CF0115B1d80b88dc8eAB59176FEe57",
    "takerAmount": "8000000000000000000",
    "takerAsset": "454839140962945226527790820083642630354574802003",
    "takerAssetId": "0",
  },
  "domain": {
    "chainId": 1,
    "name": "AUGUSTUS RFQ",
    "verifyingContract": "0xe92b586627ccA7a83dC919cc7127196d70f55a06",
    "version": "1",
  },
  "types": {
    "OrderNFT": [
      {
        "name": "nonceAndMeta",
        "type": "uint256",
      },
      {
        "name": "expiry",
        "type": "uint128",
      },
      {
        "name": "makerAsset",
        "type": "uint256",
      },
      {
        "name": "makerAssetId",
        "type": "uint256",
      },
      {
        "name": "takerAsset",
        "type": "uint256",
      },
      {
        "name": "takerAssetId",
        "type": "uint256",
      },
      {
        "name": "maker",
        "type": "address",
      },
      {
        "name": "taker",
        "type": "address",
      },
      {
        "name": "makerAmount",
        "type": "uint256",
      },
      {
        "name": "takerAmount",
        "type": "uint256",
      },
    ],
  },
}
`;
